--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <nav>
             <a href="index.html">Acasă</a>
-            <a href="../pages/inscrieri.html"> Înscrieri</a>
-            <a href="../pages/materiale.html">Materiale</a>
+            <a href="pages/inscrieri.html"> Înscrieri</a>
+            <a href="pages/materiale.html">Materiale</a>
         </nav>
 
     </header>
