--- a/pages/materiale.html
+++ b/pages/materiale.html
@@ -61,11 +61,11 @@
                 </a>
                 <a class="link" target="_blank" href="https://drive.google.com/drive/folders/1yQLTe6jc4rp-v8a00LRD-fnYS0TIviHM">
                     <img src="../images/book.png">
-                    <h3>Visual Studio Linkuri</h3>
+                    <h3>Cărți</h3>
                 </a>
                 <a class="link" target="_blank" href="https://docs.google.com/spreadsheets/d/1OJQp6Q7LoUApgA_3XnhM0KHrYxu_fpZN842qpdj-EWI/edit#gid=632899070">
                     <img src="../images/available.png">
-                    <h3>Visual Studio Linkuri</h3>
+                    <h3>Prezența</h3>
                 </a>
 
 
